Rename ComputedColumn.columnName to "name". Remove OdaDataSet.queryScript

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1674,7 +1674,7 @@ Structure.ResultSetColumn.name=Name
 Structure.ResultSetColumn.dataType=Data Type
 
 #15. ComputedColumn
-Structure.ComputedColumn.columnName=Column Name
+Structure.ComputedColumn.name=Column Name
 Structure.ComputedColumn.expression=Expression
 
 #16. ColumnHint
@@ -2186,8 +2186,6 @@ Element.OdaDataSource.privateDriverProperties=Private driver properties
 #36 OdaDataSet ( Prefix Element.OdaDataSet )
 Element.OdaDataSet.extensionName=Extension name
 Element.OdaDataSet.queryText=Query
-Element.OdaDataSet.queryScript=Script
-Element.OdaDataSet.queryScript.toolTip=Query Script
 Element.OdaDataSet.type=Type
 Element.OdaDataSet.resultSetName=Result set name
 Element.OdaDataSet.publicDriverProperties=Public driver properties
