Rename embedded image structure name from "Image" to "EmbeddedImage", and rename "Hide" to "HideRule".

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1556,9 +1556,9 @@ Structure.UserProperty=UserProperty
 Structure.SortKey=Sort Key
 Structure.FilterCond=Filter Condition
 Structure.ConfigVar=Config Variable
-Structure.Hide=Hide
+Structure.HideRule=Hide
 Structure.IncludeScript=Include Script
-Structure.Image=Image
+Structure.EmbeddedImage=Embedded Image
 Structure.OdaProperty=ODA Property
 Structure.ParamBinding=Parameter Binding
 Structure.ResultSetColumn=Column
@@ -1639,16 +1639,16 @@ Structure.SortKey.key=Sort Key
 Structure.SortKey.direction=Sort Direction
 
 #8. Hide
-Structure.Hide.format=Format
-Structure.Hide.valueExpr=Expression
+Structure.HideRule.format=Format
+Structure.HideRule.valueExpr=Expression
 
 #9. IncludeScript
 Structure.IncludeScript.fileName=Filename
 
 #10.Image
-Structure.Image.name=Name
-Structure.Image.type=Type
-Structure.Image.data=Data
+Structure.EmbeddedImage.name=Name
+Structure.EmbeddedImage.type=Type
+Structure.EmbeddedImage.data=Data
 
 #11.FilterCond
 Structure.FilterCond.operator=Operator
