Add groupStart property to ListingGroup element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2042,6 +2042,7 @@ Element.ListingGroup.keyExpr=Key expression
 Element.ListingGroup.sort=Sort
 Element.ListingGroup.toc=TOC
 Element.ListingGroup.groupName=Name
+Element.ListingGroup.groupStart=Group start
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
 Element.ListingGroup.sortDirection=Sort direction
