--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -74,7 +74,6 @@ data.engine.BadFilterExpr=The filter expression '{0}' is not invalid.
 # Wrapper Error
 data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
-data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
 
 # other error
 data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}):  {2}.
@@ -82,6 +81,8 @@ data.engine.PreparedQueryClosed=PreparedQuery instance is closed.
 data.engine.NullDefaultInParamValue=Default value for input parameter cannot be null.
 data.engine.BadGroupKeyExpr=Group key expression {0} is not valid.
 data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type of data source.
+data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
+data.engine.JSScriptInvalid=Invalid javascript expression:[{0}], source:{1}, line:{2}.
 
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
