Report complete JS error

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -82,7 +82,7 @@ data.engine.NullDefaultInParamValue=Default value for input parameter cannot be 
 data.engine.BadGroupKeyExpr=Group key expression {0} is not valid.
 data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type of data source.
 data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
-data.engine.JSScriptInvalid=Invalid javascript expression:[{0}], source:{1}, line:{2}.
+data.engine.JSScriptInvalid=Invalid Javascript expression. Source: {1}, line: {2}, Expression:\n{0}\nScript engine error: {3}
 
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
