Fixed bugs in ROM and failed tests.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -342,11 +342,11 @@ Choices.lineWidth.thick=Thick
 #49.inherit
 Choices.inherit.inherit=Inherit
 
-#50. ContentType
-Choices.ContentType.auto=Auto
-Choices.ContentType.plain=Plain
-Choices.ContentType.html=HTML
-Choices.ContentType.rtf=RTF
+#50. textContentType
+Choices.textContentType.auto=Auto
+Choices.textContentType.plain=Plain
+Choices.textContentType.html=HTML
+Choices.textContentType.rtf=RTF
 
 #51. formatType
 Choices.formatType.all=All
@@ -454,13 +454,17 @@ Choices.stringFormat.phoneNumber=Phone Number
 Choices.stringFormat.socialSecurityNumber=Social Security Number
 Choices.stringFormat.custom=Custom
 
-
 #60. targetNames
 Choices.targetNames.blank=Blank
 Choices.targetNames.self=Self
 Choices.targetNames.parent=Parent
 Choices.targetNames.top=Top
 
+#50. textDataContentType
+Choices.textDataContentType.auto=Auto
+Choices.textDataContentType.plain=Plain
+Choices.textDataContentType.html=HTML
+Choices.textDataContentType.rtf=RTF
 
 ###########################################################
 # Classes
@@ -969,9 +973,9 @@ Class.ElementDefn.extends.toolTip=Provides the name of the parent element that t
 Class.ElementDefn.propertyDefns=propertyDefns
 Class.ElementDefn.propertyDefns.toolTip=An array of property definitions 
 Class.ElementDefn.slotDefns=slotDefns
-Class.ElementDefn.slotDefns.toolTip=An array of slot definitions
-Class.ElementDefn.property=property
-Class.ElementDefn.property.toolTip=Provides the value of a design-time property that has this name
+Class.ElementDefn.slotDefns.toolTip=An array of slot definitions.
+Class.ElementDefn.property=[anyProperty]
+Class.ElementDefn.property.toolTip=Provides the value of a design-time property that has this name.
 Class.ElementDefn.properties=properties
 Class.ElementDefn.properties.toolTip=An array of property values indexed by property name
 Class.ElementDefn.slots=slots
@@ -1167,18 +1171,18 @@ Class.ColumnDefn.BLOB=BLOB
 Class.ColumnDefn.BLOB.toolTip=A constant for a Binary Large OBject (BLOB) column 
 
 
-#20. DataSetSchema
+#20. DataSetParamMetaData
 
-Class.DataSetSchema=DataSetSchema
-Class.DataSetSchema.toolTip=Provides information about the input and output parameters of ODA data set
-Class.DataSetSchema.description=description
-Class.DataSetSchema.description.toolTip=The data set description provided by the ODA provider
-Class.DataSetSchema.resultSets=resultSets
-Class.DataSetSchema.resultSets.toolTip=An array of ResultSetDefn objects that describe each result set returned by an ODA data set
-Class.DataSetSchema.inputParams=inputParams
-Class.DataSetSchema.inputParams.toolTip=An array of input parameter definitions in the form of DataSetInputParam objects 
-Class.DataSetSchema.outputParams=outputParams
-Class.DataSetSchema.outputParams.toolTip=An array of output parameter definitions in the form of DataSetOutputParam objects
+Class.DataSetParamMetaData=DataSetParamMetaData
+Class.DataSetParamMetaData.toolTip=Provides information about the input and output parameters of ODA data set.
+Class.DataSetParamMetaData.description=description
+Class.DataSetParamMetaData.description.toolTip=The data set description provided by the ODA provider.
+Class.DataSetParamMetaData.resultSets=resultSets
+Class.DataSetParamMetaData.resultSets.toolTip=An array of ResultSetDefn objects that describe each result set returned by an ODA data set.
+Class.DataSetParamMetaData.inputParams=inputParams
+Class.DataSetParamMetaData.inputParams.toolTip=An array of input parameter definitions in the form of DataSetInputParam objects. 
+Class.DataSetParamMetaData.outputParams=outputParams
+Class.DataSetParamMetaData.outputParams.toolTip=An array of output parameter definitions in the form of DataSetOutputParam objects.
 
 #21. ResultSetDefn
 
@@ -1554,7 +1558,7 @@ Structure.DrillThroughSearchKey=DrillThroughSearchKey
 Structure.Action=Action
 Structure.UserProperty=UserProperty
 Structure.SortKey=Sort Key
-Structure.FilterCond=Filter Condition
+Structure.FilterCondition=Filter Condition
 Structure.ConfigVar=Config Variable
 Structure.HideRule=Hide
 Structure.IncludeScript=Include Script
@@ -1645,16 +1649,16 @@ Structure.HideRule.valueExpr=Expression
 #9. IncludeScript
 Structure.IncludeScript.fileName=Filename
 
-#10.Image
+#10.EmbeddedImage
 Structure.EmbeddedImage.name=Name
 Structure.EmbeddedImage.type=Type
 Structure.EmbeddedImage.data=Data
 
-#11.FilterCond
-Structure.FilterCond.operator=Operator
-Structure.FilterCond.expr=Expression
-Structure.FilterCond.value1=Value 1
-Structure.FilterCond.value2=Value 2
+#11.FilterCondition
+Structure.FilterCondition.operator=Operator
+Structure.FilterCondition.expr=Expression
+Structure.FilterCondition.value1=Value 1
+Structure.FilterCondition.value2=Value 2
 
 #10. PropertyMask
 Structure.PropertyMask.name=Name
@@ -2058,7 +2062,7 @@ Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the
   
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=header
-Element.List.slot.group=group
+Element.List.slot.groups=groups
 Element.List.slot.detail=detail
 Element.List.slot.footer=footer
   
@@ -2071,7 +2075,7 @@ Element.Table.caption=Caption
 Element.Table.captionID=Caption key
 Element.Table.repeatHeader=Repeat header
 Element.Table.slot.header=header
-Element.Table.slot.group=group
+Element.Table.slot.groups=groups
 Element.Table.slot.detail=detail
 Element.Table.slot.footer=footer
 Element.Table.slot.columns=columns
@@ -2089,7 +2093,7 @@ Element.Column.alignment=Alignment
 Element.Row.visibility=Visibility
 Element.Row.height=Height
 Element.Row.bookmark=Bookmark
-Element.Row.slot.cell=Cell
+Element.Row.slot.cells=Cells
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
@@ -2117,7 +2121,7 @@ Element.Image.action=Action
   
 #24.Grid  ( prefix  Element.Grid )
 Element.Grid.slot.columns=columns
-Element.Grid.slot.row=row
+Element.Grid.slot.rows=rows
   
 #25.Line  ( prefix  Element.Line )
 Element.Line.orientation=Orientation
