--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -83,7 +83,7 @@ data.engine.BadGroupKeyExpr=Group key expression {0} is not valid.
 data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type of data source.
 data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
 data.engine.JSScriptInvalid=Invalid Javascript expression. Source: {1}, line: {2}, Expression:\n{0}\nScript engine error: {3}
-
+data.engine.ConvertDataTypeError=Cannot convert the parameter value [{0}] to type [{1}]
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
