rename parts of operator names.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -157,10 +157,10 @@ Choices.mapOperator.ge=Larger than or Equal
 Choices.mapOperator.gt=Larger than
 Choices.mapOperator.between=Between
 Choices.mapOperator.notBetween=Not Between
-Choices.mapOperator.null=Null
-Choices.mapOperator.notNull=Not Null
-Choices.mapOperator.true=True
-Choices.mapOperator.false=False
+Choices.mapOperator.isNull=Is Null
+Choices.mapOperator.isNotNull=Is Not Null
+Choices.mapOperator.isTrue=Is True
+Choices.mapOperator.isFalse=Is False
 Choices.mapOperator.like=Like
 Choices.mapOperator.any=Any
   
@@ -368,11 +368,11 @@ Choices.filterOperator.le=Less than or Equal
 Choices.filterOperator.ge=Larger than or Equal
 Choices.filterOperator.gt=Larger than
 Choices.filterOperator.between=Between
-Choices.filterOperator.not-between=Not Between
-Choices.filterOperator.null=Null
-Choices.filterOperator.not-null=Not Null
-Choices.filterOperator.true=True
-Choices.filterOperator.false=False
+Choices.filterOperator.notBetween=Not Between
+Choices.filterOperator.isNull=Is Null
+Choices.filterOperator.isNotNull=Is Not Null
+Choices.filterOperator.isTrue=Is True
+Choices.filterOperator.isFalse=Is False
 Choices.filterOperator.like=Like
 Choices.filterOperator.top-n=Top n
 Choices.filterOperator.bottom-n=Bottom n
