Update "msgBaseName" on ReportDesign to "includeResource".

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1798,7 +1798,7 @@ Element.ReportDesign.createdBy=Created by
 Element.ReportDesign.units=Units
 Element.ReportDesign.refreshRate=Refresh rate
 Element.ReportDesign.base=Base
-Element.ReportDesign.msgBaseName=Message base name
+Element.ReportDesign.includeResource=Include resource
 Element.ReportDesign.title=Title
 Element.ReportDesign.titleID=Title key
 Element.ReportDesign.description=Description
