- Summary: Expression Builder Cleanup
- SCR(s) Resolved: 77945

- Description:  Change presentation  names shown at  Level 2 as follows:

           String Functions
           Date Functions
           Array Functions
           Boolean Functions
           Number Functions
           RegExp Functions
           Math Functions
           Object Functions
           Global Functions

           Global Variables
           Total (Aggregate) Functions
           DateTimeSpan Functions
           Finance Functions
           Report Class
           DataSet Class
           DataRow Class
           ReportDefn Class
           ColumnDefn Class
           ElementDefn Class
           PropertyDefn Class
           DataSetParamMetaData Class
           DataSetInputParam Class
           DataSetOutputParam Class
           Color Class
           Dimension Class

- Regression ( Yes/No ):No

- Code Owner: Nina Li

- Code Reviewers:

- Tests: Yes

- Tests Automated (Yes/No, if "No", then explain why): No, GUI features

- Case Entries Resolved:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation:

- Notes to Configuration Management:

- Notes to Support:

- Notes to Product Marketing:

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -472,7 +472,7 @@ Choices.textDataContentType.rtf=RTF
 Class.optionalArgument=...
 
 #0.String
-Class.String=String
+Class.String=String Functions
 Class.String.toolTip=A member of the type Object and an instance of the built-in String object
 Class.String.String=String
 Class.String.String.toolTip=Returns a string value computed by ToString(value)
@@ -543,7 +543,7 @@ Class.String.substring.from=from
 Class.String.substring.to=to
 
 #1.Global
-Class.Global=Global
+Class.Global=Global Functions
 Class.Global.toolTip=An intrinsic object whose purpose is to collect global methods into one object
 Class.Global.NaN=NaN
 Class.Global.NaN.toolTip=The initial value is not a number
@@ -589,7 +589,7 @@ Class.Global.unescape.s=s
 
 #2.Array
 
-Class.Array=Array
+Class.Array=Array Functions
 Class.Array.toolTip=Provides support for expando arrays of any data type
 Class.Array.Array=Array
 Class.Array.Array.toolTip=Creates and initialises a new Array object
@@ -634,7 +634,7 @@ Class.Array.unshift.value=value
 
 #3. Boolean
 
-Class.Boolean=Boolean
+Class.Boolean=Boolean Functions
 Class.Boolean.toolTip=A member of the type Object and is an instance of the built-in Boolean object
 Class.Boolean.Boolean=Boolean
 Class.Boolean.Boolean.toolTip=Returns a boolean value computed by ToBoolean(value)
@@ -647,7 +647,7 @@ Class.Boolean.Boolean.value=value
 
 #4. Date
 
-Class.Date=Date
+Class.Date=Date Functions
 Class.Date.toolTip=An object that enables basic storage and retrieval of dates and times
 Class.Date.Date=Date
 Class.Date.Date.toolTip=Returns a string representing the current time
@@ -801,7 +801,7 @@ Class.Date.UTC.ms=ms
 
 #5. Math
 
-Class.Math=Math
+Class.Math=Math Functions
 Class.Math.toolTip=An intrinsic object that provides basic mathematics functionality and constants
 Class.Math.E=E
 Class.Math.E.toolTip=The number value for e is approximately 2.7182818284590452354
@@ -879,7 +879,7 @@ Class.Math.tan.x=x
 
 #6. Number
 
-Class.Number=Number
+Class.Number=Number Functions
 Class.Number.toolTip=An object representation of numeric data and placeholder for numeric constants
 Class.Number.Number=Number
 Class.Number.Number.toolTip=Returns a number value computed by ToNumber(value)
@@ -914,7 +914,7 @@ Class.Number.toString.radix=radix
 
 #7. Object
 
-Class.Object=Object
+Class.Object=Object Functions
 Class.Object.toolTip=A member of the type Object
 Class.Object.Object=Object
 Class.Object.Object.toolTip=Create an object
@@ -938,7 +938,7 @@ Class.Object.propertyIsEnumerable.propname=propname
 
 #8. RegExp
 
-Class.RegExp=RegExp
+Class.RegExp=RegExp Functions
 Class.RegExp.toolTip=Provides simple regular expression support 
 Class.RegExp.RegExp=RegExp
 Class.RegExp.RegExp.toolTip=Applies the grammar to the input pattern string
@@ -964,7 +964,7 @@ Class.RegExp.test.string=string
 
 #9.  ElementDefn
 
-Class.ElementDefn=ElementDefn
+Class.ElementDefn=ElementDefn Class
 Class.ElementDefn.toolTip=Provides design information for a report element
 Class.ElementDefn.name=name
 Class.ElementDefn.name.toolTip=Provides the name of the element
@@ -1005,7 +1005,7 @@ Class.ElementState.slot.toolTip=Provides access to the elements that this elemen
 
 #11. Color
 
-Class.Color=Color
+Class.Color=Color Class
 Class.Color.toolTip=Provides methods that work with color values as names, RGB values
 Class.Color.transparent=transparent
 Class.Color.transparent.toolTip=Returns true if the property is set to the CSS transparent value
@@ -1019,7 +1019,7 @@ Class.Color.cssValue.toolTip=Gets the color in the form that can be set in CSS: 
 
 #12. Dimension
 
-Class.Dimension=Dimension
+Class.Dimension=Dimension Class
 Class.Dimension.toolTip=The dimension property object handles parsing of a CSS dimension property
 Class.Dimension.value=value
 Class.Dimension.value.toolTip=Returns the CSS-compatible dimension value
@@ -1030,7 +1030,7 @@ Class.Dimension.units.toolTip=Gets the units portion of a dimension, or null if 
 
 #13. PropertyDefn
 
-Class.PropertyDefn=PropertyDefn
+Class.PropertyDefn=PropertyDefn Class
 Class.PropertyDefn.toolTip=The property definition object provides meta-data information about a BIRT- or user-defined property
 Class.PropertyDefn.isUserProperty=isUserProperty
 Class.PropertyDefn.isUserProperty.toolTip=True if this is a user-defined property, false if it is a system-defined property
@@ -1051,7 +1051,7 @@ Class.PropertyDefn.defaultValue.toolTip=Default value for the property
 
 #14. Report
 
-Class.Report=Report
+Class.Report=Report Class
 Class.Report.toolTip=Provides access to all information about the report and the context in which the report is running
 Class.Report.design=design
 Class.Report.design.toolTip=Returns a ReportDefn object that describes the design of the report
@@ -1104,7 +1104,7 @@ Class.ReportDefn.findParameter.parameterName=parameterName
 
 #17. DataSet
 
-Class.DataSet=DataSet
+Class.DataSet=DataSet Class
 Class.DataSet.toolTip=Provides both design and run-time information about a data set
 Class.DataSet.row=row
 Class.DataSet.row.toolTip=Represents the current inner-most row
@@ -1129,7 +1129,7 @@ Class.DataSet.privateProperties.toolTip=Provides the private properties for an O
 
 #18. DataRow
 
-Class.DataRow=DataRow
+Class.DataRow=DataRow Class
 Class.DataRow.toolTip=Represents one row fetched from a data set
 Class.DataRow.DataRow=DataRow
 Class.DataRow.DataRow.toolTip=Create a blank data row given a data set or a data row as a copy of another
@@ -1147,7 +1147,7 @@ Class.DataRow.schema.toolTip=Returns an array of column descriptions for the dat
 
 #19. ColumnDefn
 
-Class.ColumnDefn=ColumnDefn
+Class.ColumnDefn=ColumnDefn Class
 Class.ColumnDefn.toolTip=Describes meta-data for a data row column
 Class.ColumnDefn.index=index
 Class.ColumnDefn.index.toolTip=Returns index of the column within the result set data row for the data set
@@ -1173,7 +1173,7 @@ Class.ColumnDefn.BLOB.toolTip=A constant for a Binary Large OBject (BLOB) column
 
 #20. DataSetParamMetaData
 
-Class.DataSetParamMetaData=DataSetParamMetaData
+Class.DataSetParamMetaData=DataSetParamMetaData Class
 Class.DataSetParamMetaData.toolTip=Provides information about the input and output parameters of ODA data set.
 Class.DataSetParamMetaData.description=description
 Class.DataSetParamMetaData.description.toolTip=The data set description provided by the ODA provider.
@@ -1239,7 +1239,7 @@ Class.ResultSetColumn.MEASURE.toolTip=Choice for the axisType property
 
 #23. DataSetInputParam
 
-Class.DataSetInputParam=DataSetInputParam
+Class.DataSetInputParam=DataSetInputParam Class
 Class.DataSetInputParam.toolTip=Describes one input parameter for an ODA data set
 Class.DataSetInputParam.name=name
 Class.DataSetInputParam.name.toolTip=Unique name of an input parameter
@@ -1258,7 +1258,7 @@ Class.DataSetInputParam.recordDefn.toolTip=The definition of each field in a com
 
 #24. DataSetOutputParam
 
-Class.DataSetOutputParam=DataSetOutputParam
+Class.DataSetOutputParam=DataSetOutputParam Class
 Class.DataSetOutputParam.toolTip=Describes one output parameter for an ODA data set
 Class.DataSetOutputParam.name=name
 Class.DataSetOutputParam.name.toolTip=Unique name of an output parameter
@@ -1286,7 +1286,7 @@ Class.ItemState.rows.toolTip=Allows to access to rows within this hierarchy
 
 #26. Total
 
-Class.Total=Total
+Class.Total=Total(Aggregate) Functions
 Class.Total.toolTip=A holder for the aggregate functions
 Class.Total.OVERALL=OVERALL
 Class.Total.OVERALL.toolTip=A constant used for the group argument that requests the overall total for the data set
@@ -1370,7 +1370,7 @@ Class.Total.last.group=group
 
 #27. Finance
 
-Class.Finance=Finance
+Class.Finance=Finance Functions
 Class.Finance.toolTip=A collection of static financial functions
 
 Class.Finance.ddb=ddb
@@ -1475,7 +1475,7 @@ Class.Finance.percent.rate=rate
 
 #28. DateTimeSpan
 
-Class.DateTimeSpan=DateTimeSpan
+Class.DateTimeSpan=DateTimeSpan Functions
 Class.DateTimeSpan.toolTip=A collection of functions for working with a span between two dates or times
 Class.DateTimeSpan.years=years
 Class.DateTimeSpan.years.toolTip=Returns the number of whole years between two dates
@@ -1534,7 +1534,7 @@ Class.DateTimeSpan.subTime.seconds=seconds
 
 #29.GlobalBirt
 
-Class.GlobalBirt=Global Birt
+Class.GlobalBirt=Global Variables
 Class.GlobalBirt.toolTip=Provides a number of global variables that allow expressions and scripts access to data rows and information about the report
 Class.GlobalBirt.datasets=Birt Data Sets
 Class.GlobalBirt.datasets.toolTip=Returns the array of data sets defined in the report
