New ODA extension point design

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -20,7 +20,7 @@ data.engine.WrongNumAggrArgs=Wrong number of arguments to aggregate function: {0
 data.engine.DupPropertyName=Found duplicate property name: {0}
 data.engine.NoSubQueryName=Cannot find subquery with name '{0}'
 
-data.engine.DataSourceMissingDriver=Missing driverName in definition of data source {0}
+data.engine.DataSourceMissingExtId=Missing extension id in definition of data source {0}
 data.engine.NullGroupStart=The group start value cannot be null
 
 data.engine.ResultClosed=Result iterator has been closed.
@@ -115,7 +115,7 @@ odaconsumer.NamedResultSetsUnsupported=This statement does not support named res
 odaconsumer.OutputParameterUnsupported=This statement does not support output parameters.
 odaconsumer.CannotGetConnectionMetaData=Cannot get the connection metadata.
 odaconsumer.CannotGetMaxConnections=Cannot get the maximum number of connections for the data source.
-odaconsumer.CannotGetMaxStatements=Cannot get the maximum number of statements for the data source.
+odaconsumer.CannotGetMaxStatements=Cannot get the maximum number of queries for the data source.
 odaconsumer.CannotGetDataSetMetaData=Cannot get the data set metadata ({0}) from the data source.
 odaconsumer.CannotPrepareStatement=Cannot prepare the query ({0}) for the data set type ({1}).
 odaconsumer.CannotCloseConnection=Cannot close the connection.
@@ -171,6 +171,7 @@ odaconsumer.CannotSetTimestampParameter=Cannot set the timestamp value for param
 odaconsumer.CannotClearInParameters=Cannot clear the input parameter values.
 odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
 odaconsumer.CannotGetColumnNativeDataTypeName=Cannot get the native data type name for the column ({0}).
+odaconsumer.CannotGetParameterMetaData=Cannot get ODA driver parameter metadata.
 
 odaconsumer.manager.CannotGetNamedResultsAfterExecuteQuery=Cannot get result sets by name after executeQuery() has been called.
 odaconsumer.manager.CannotSetParamBeforePrepare=Cannot set input parameters before statement has been prepared.
