--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -27,44 +27,44 @@ odajdbc.CannotGetPrecision=Can not get precision
 odajdbc.CannotGetScale=Can not get Scale
 odajdbc.CannotDetermineSupportForNull=Can not determine whether the parameter is nullable
 
-odajdbc.CannotGetResultSet=Can not get the resultset
-odajdbc.CannotGetResultSetMetadata=Can not get the resultset metadata
-odajdbc.CannotCloseResultSet=Can not close the resultset
-odajdbc.CursorDownError=Can not move down to the resultset's next
-odajdbc.ResultSetCannotGetStringValue=Can not get the resultset's string value
-odajdbc.ResultSetCannotGetIntValue=Can not get the resultset's int value
-odajdbc.ResultSetCannotGetDoubleValue=Can not get the resultset's double value
-odajdbc.ResultSetCannotGetBigDecimalValue=Can not get the resultset's bigDecimal value
-odajdbc.ResultSetCannotGetDateValue=Can not get the resultset's date value
-odajdbc.ResultSetCannotGetTimeValue=Can not get the resultset's time value
-odajdbc.ResultSetCannotGetTimeStampValue=Can not get the resultset's time stamp value
+odajdbc.CannotGetResultSet=Cannot get the resultset
+odajdbc.CannotGetResultSetMetadata=Cannot get the resultset metadata
+odajdbc.CannotCloseResultSet=Cannot close the resultset
+odajdbc.CursorDownError=Cannot move down to the resultset's next
+odajdbc.ResultSetCannotGetStringValue=Cannot get the resultset's string value
+odajdbc.ResultSetCannotGetIntValue=Cannot get the resultset's int value
+odajdbc.ResultSetCannotGetDoubleValue=Cannot get the resultset's double value
+odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get the resultset's bigDecimal value
+odajdbc.ResultSetCannotGetDateValue=Cannot get the resultset's date value
+odajdbc.ResultSetCannotGetTimeValue=Cannot get the resultset's time value
+odajdbc.ResultSetCannotGetTimeStampValue=Cannot get the resultset's time stamp value
 odajdbc.ResultSetDetermineNull=Error occurs when judge whether the resultset last column read has a value of null
 odajdbc.ResultSetCannotFindColumn=ResultSet object does not contain columnName or database access error
 
-odajdbc.CannotGetColumnCount=Can not get column count
-odajdbc.CannotGetColumnName=Can not get column name
-odajdbc.CannotGetColumnLabel=Can not get column label
-odajdbc.CannotGetColumnType=Can not get column type
-odajdbc.CannotGetColumnTypeName=Can not get column type name
-odajdbc.CannotGetColumnDisplaySize=Can not get column display size
-odajdbc.CannotGetResultSetMetaDataPrecision=Can not get resultset metadata precision
-odajdbc.CannotGetResultSetMetaDataScale=Can not get resultset meatdata scale
+odajdbc.CannotGetColumnCount=Cannot get column count
+odajdbc.CannotGetColumnName=Cannot get column name
+odajdbc.CannotGetColumnLabel=Cannot get column label
+odajdbc.CannotGetColumnType=Cannot get column type
+odajdbc.CannotGetColumnTypeName=Cannot get column type name
+odajdbc.CannotGetColumnDisplaySize=Cannot get column display size
+odajdbc.CannotGetResultSetMetaDataPrecision=Cannot get resultset metadata precision
+odajdbc.CannotGetResultSetMetaDataScale=Cannot get resultset meatdata scale
 odajdbc.CannotDetermineColumnSupportForNull=Error occurs when judge the nullability status of the given column
 
 odajdbc.StatementCannotPrepared=Error occurs when prepare the statement
-odajdbc.CannotClosePreparedStatement=Can not close preparedStatement
-odajdbc.CannotGetPreparedStatementMetadata=Can not get preparedStatement metadata
+odajdbc.CannotClosePreparedStatement=Cannot close preparedStatement
+odajdbc.CannotGetPreparedStatementMetadata=Cannot get preparedStatement metadata
 odajdbc.ResultSetCannotReturn=SQL statement does not return a ResultSet object
 odajdbc.QueryExecuteFail=SQL statement does not return a ResultSet object or an update count,an error occur.
-odajdbc.PrepareStatement.CannotSetIntValue=Can not set preparedStatement parameter int value
-odajdbc.PrepareStatement.CannotSetDoubleValue=Can not set preparedStatement parameter Double value
-odajdbc.PrepareStatement.CannotSetBigDecimalValue=Can not set preparedStatement parameter BigDecimal value
-odajdbc.PrepareStatement.CannotSetStringValue=Can not set preparedStatement parameter String value
-odajdbc.PrepareStatement.CannotSetDateValue=Can not set preparedStatement parameter Date value
-odajdbc.PrepareStatement.CannotSetTimeValue=Can not set preparedStatement parameter Time value
-odajdbc.PrepareStatement.CannotSetTimestampValue=Can not set preparedStatement parameter Timestamp value
-odajdbc.PrepareStatement.CannotGetParameterType=Can not get the paramter type from parameter metadata
-odajdbc.CannotGetParameterMetadata=Can not retrieve the parameter metadata
+odajdbc.PrepareStatement.CannotSetIntValue=Cannot set preparedStatement parameter int value
+odajdbc.PrepareStatement.CannotSetDoubleValue=Cannot set preparedStatement parameter Double value
+odajdbc.PrepareStatement.CannotSetBigDecimalValue=Cannot set preparedStatement parameter BigDecimal value
+odajdbc.PrepareStatement.CannotSetStringValue=Cannot set preparedStatement parameter String value
+odajdbc.PrepareStatement.CannotSetDateValue=Cannot set preparedStatement parameter Date value
+odajdbc.PrepareStatement.CannotSetTimeValue=Cannot set preparedStatement parameter Time value
+odajdbc.PrepareStatement.CannotSetTimestampValue=Cannot set preparedStatement parameter Timestamp value
+odajdbc.PrepareStatement.CannotGetParameterType=Cannot get the paramter type from parameter metadata
+odajdbc.CannotGetParameterMetadata=Cannot retrieve the parameter metadata
 odajdbc.ClearParametersError=Error occurs when clear the current parameter value
 
 #used in assert error
@@ -75,7 +75,6 @@ odajdbc.driver.ResultSetCannotNull=ResultSet can't be null
 odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData can't be null
 odajdbc.driver.StatementCannotNull=Statement need to be prepared before this operation
 
-
-
- 
-
+odajdbc.CannotGetMaxQueries=Cannot get MaxStatements from underlying JDBC connection.
+odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC Statement.
+odajdbc.BadQueryProperty=Query property {0} is not supported.
