change the display name for fromChar to fromcharCode

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -478,7 +478,7 @@ Class.String.String=String
 Class.String.String.toolTip=Returns a string value computed by ToString(value)
 Class.String.length=length
 Class.String.length.toolTip=Returns the length of a string
-Class.String.fromCharCode=fromChar
+Class.String.fromCharCode=fromCharCode
 Class.String.fromCharCode.toolTip=Returns a string from a number of Unicode character values
 Class.String.charAt=charAt
 Class.String.charAt.toolTip=Returns the character at the specified index of a String object
