renames two properties in ROM.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2045,7 +2045,7 @@ Element.ListingGroup.keyExpr=Key expression
 Element.ListingGroup.sort=Sort
 Element.ListingGroup.toc=TOC
 Element.ListingGroup.groupName=Name
-Element.ListingGroup.groupStart=Group start
+Element.ListingGroup.intervalBase=Interval Base
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
 Element.ListingGroup.sortDirection=Sort direction
@@ -2127,7 +2127,7 @@ Element.Line.orientation=Orientation
   
 #26.TextData  ( prefix  Element.TextData )
 Element.TextData.valueExpr=Value expression
-Element.TextData.contentTypeExpr=Content type expression
+Element.TextData.contentType=Content type
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
 Element.ExtendedItem.extensionName=Extension name
