Rename DrillthroughSearchKey to SearchKey in rom.def

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1554,7 +1554,7 @@ Class.GlobalBirt.report.toolTip=Provides access to all information about the rep
 Structure.MapRule=MapRule
 Structure.HighlightRule=HighlightRule
 Structure.CustomColor=CustomColor
-Structure.DrillThroughSearchKey=DrillThroughSearchKey
+Structure.SearchKey=SearchKey
 Structure.Action=Action
 Structure.UserProperty=UserProperty
 Structure.SortKey=Sort Key
