*** empty log message ***

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1626,7 +1626,7 @@ Structure.CustomColor.displayName=Display Name
 Structure.CustomColor.displayNameID=Display Name Key
   
 #4.DrillThroughSearchKeys
-Structure.DrillThroughSearchKey.expression=Expression
+Structure.SearchKey.expression=Expression
   
 #5.UserProperty
 Structure.UserProperty.name=Name
