Change the spell error for the method name in ROM.def

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -549,8 +549,8 @@ Class.Global.NaN=NaN
 Class.Global.NaN.toolTip=The initial value is not a number
 Class.Global.Infinity=Infinity
 Class.Global.Infinity.toolTip=Returns the value of Number.POSITIVE_INFINITY (a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript)
-Class.Global.undefined=underfined
-Class.Global.undefined.toolTip=The initial value is undefined
+Class.Global.Undefined=underfined
+Class.Global.Undefined.toolTip=The initial value is undefined
 Class.Global.decodeURI=decodeURI
 Class.Global.decodeURI.toolTip=Returns the unencoded version of an encoded Uniform Resource Identifier (URI)
 Class.Global.decodeURIComponent=decodeURIComponent
@@ -893,8 +893,8 @@ Class.Number.NEGATIVE_INFINITY=NEGATIVE_INFINITY
 Class.Number.NEGATIVE_INFINITY.toolTip=Returns a value more negative than the largest negative number (-Number.MAX_VALUE) representable in JScript
 Class.Number.POSITIVE_INFINITY=POSITIVE_INFINITY
 Class.Number.POSITIVE_INFINITY.toolTip=Returns a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript
-Class.Number.toExpoential=toExpoential
-Class.Number.toExpoential.toolTip=Returns a string containing a number represented in exponential notation
+Class.Number.getExponential=getExponential
+Class.Number.getExponential.toolTip=Returns a string containing a number represented in exponential notation
 Class.Number.toFixed=toFixed
 Class.Number.toFixed.toolTip=Returns a string representing a number in fixed-point notation
 Class.Number.toLocaleString=toLocaleString
